fix(pages): prevent links from overflowing

--- a/pages/research/styles/InitialResearch.css
+++ b/pages/research/styles/InitialResearch.css
@@ -20,4 +20,5 @@
 #sources ul {
   display: inline-block;
   text-align: left;
+  word-break: break-all;
 }
